# Quad-Bot

./: CMakeLists.txt  README.md  package.xml
config/: hyperdog_joint_controller.yaml
description/: camera.xacro  consts.xacro  depthcam.xacro  gazebo_ros2_control_plugin.xacro  hyperdog.urdf.xacro  hyperdog_gazebo.xacro  hyperdog_urdf_joints.xacro  hyperdog_urdf_links.xacro  lidar.xacro
launch/: hyperdog_gazebo_sim.launch.py  l2.py
src/: DQN_script_7.py  com.py  dyn_pos.py  ppo2layer.py  rl.py  rl1.py  rl_10layer.py  rl_2layer.py  rl_4layer.py  rl_7layer.py  rl_agent.py  rl_ppo2layer.py  test.py
src/sac_2layer/: actor_sac  critic_1_sac  critic_2_sac  target_value_sac  value_sac
src/sac_4layer/: actor_sac  critic_1_sac  critic_2_sac  target_value_sac  value_sac
worlds/play/: model.config  model.sdf
worlds/pole1/: model.config  model.sdf
worlds/stairs/: model.sdf
worlds/test/: model.sdf
worlds/test/unit_cylinder/: model.sdf
worlds/test2/: model.config  model.sdf
worlds/testx/: model.config  model.sdf
worlds/wall/: model.sdf
